<resources>
    <string name="app_name">Daily it</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="example_domain">example@domain.com</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="expires_in_hours">Expires in %1$d hours</string>
    <string name="server_id" translatable="false">827759519524-tvofk1lrd094v7vbt8pek565fq2ndu4p.apps.googleusercontent.com</string>
    <string name="doing">Doing</string>
    <string name="tasks">Tasks</string>
    <string name="to_do">To do</string>
    <string name="done">Done</string>
    <string name="delete_task">Remove \"%1$s\"</string>
    <string name="confirm_delete_task">Are you sure to delete the task \"%1$s\"? This action cant be reversed</string>
    <string name="none">None</string>
    <string name="work">Work</string>
    <string name="no_taskes_found">There are not taskes</string>
    <string name="expired">Expired</string>
    <string name="expires_in_days">Expires in %1$d days</string>
    <string name="expires_in_seconds">Expires in %1$ds</string>
    <string name="expires_in_minutes">Expires in %1$dm</string>
    <string name="task_name">Task Name</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="expires">Expires</string>
    <string name="group">Group</string>
    <string name="description">Description</string>
    <string name="cash_movement">Income / expense</string>
    <string name="task">Task</string>
    <string name="loadin_task">Loading task...</string>
    <string name="new_task">New task</string>
    <string name="exit_without_saving">Exit without saving \"%1$s\"</string>
    <string name="changes_without_saving">There are changes to the task not yet saved. Are you sure you want to exit without saving?</string>
    <string name="name_empty_exception_message">The task\'s name cannot be empty.</string>
    <string name="exit_without_saving_new">Exit without saving</string>
    <string name="no_description">There isn`t a description.</string>
    <string name="saved">The task has been saved.</string>
    <string name="home">Home</string>
    <string name="not_implemented_yet">This action isn\'t implemented yet.</string>
    <string name="categories">Categories</string>
    <string name="groups">Groups</string>
    <string name="my_categories">My categories</string>
    <string name="name">Name</string>
    <string name="color" translatable="false">Color</string>
    <string name="save">Save</string>
    <string name="new_category">New category</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="sky">Sky</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="grey">Grey</string>
    <string name="no_category_name">Category needs a name</string>
    <string name="category_saved">The category has been saved. Reload to see the changes.</string>
    <string name="no_expire_time">You cannot create a task without an expiration date.</string>
    <string name="no_date_selected">Unfilled</string>
    <string name="email_invalid">The email address entered is not valid.</string>
    <string name="invalid_login">The login credentials are incorrect.</string>
    <string name="password_invalid">The password is not valid. It must include a number, a letter in lowercase, uppercase, a special character and have a minimum of 10 characters.</string>
    <string name="stats">Stats</string>
    <string name="my_stats">My stats</string>
    <string name="error_loging_with_google">An error occurred trying to sign in with Google, please try again later.</string>
    <string name="task_created_in_the_last_week">Tasks created in the last week</string>
    <string name="dia">Day</string>
    <string name="total_task_count">Total tasks: %1$d</string>
    <string name="total_todo">To Do: %1$d</string>
    <string name="total_doing">Doing: %1$d</string>
    <string name="total_done">Done: %1$d</string>
    <string name="not_enought_data">There is not enough data to display on the graph.</string>
    <string name="fast_expire_time">You cannot create a task that expires in less than 5 minutes.</string>
    <string name="loading">Loading...</string>
    <string name="editing">Editing: %1$s</string>
    <string name="error_reading_user_data">There was an error reading your user data. Try it again later.</string>
    <string name="error_saving_task">There was an error saving the task. Try it again later.</string>
</resources>